Changelog
=========


2.1b2 (unreleased)
------------------

- Don't depend on p4a.calendar [tomgross]


2.1b1 (2012-08-04)
------------------

This version was tested with Plone 3.3.5, Plone 4.1.6 and Plone 4.2.

- ignore cases where ICalendarSupport is already properly uninstalled on uninstall step. [iElectric] 

- Added support for i18n. [macagua]

- Added support for Spanisn translation. [macagua]

- make views subclass Products.Five.browser.BrowserView so that their templates
  can be customized through portal_view_customizations. [swampmonkey]
  
- Removed tests for p4a.ploneevent. It hasn't had any new users since 2009, afaik. [regebro]

- No longer uses p4a.subtyper. The calendar views are just normal views. [regebro]

- Added upgrade step to get rid of all marker interfaces, etc. 
  This also means we no longer need an uninstall, and therefore also no Extensions/Install.py
  so they have also been removed. [regebro]

- Now uses the z3c.autoinclude.plugin. [regebro]

- Added Plone 4.1 and 4.2 support. [regebro]

2.0a7 (2010-08-01)
------------------

- Update profile installation to work with GenericSetup 1.6.x. [davisagli]

- Made IObjectModifiedEvent import location conditional for compatibility with
  Zope 2.12. [tom_gross]

2.0a6 (2009-08-07)
------------------

- The import link is no longer shown in Topics. [regebro]


2.0a5 (2009-07-05)
------------------

- Removed p4a.ploneevent as a dependency. It's not required. [regebro]


2.0a3 (2009-05-17)
------------------

- Fixed issue where a TopicEventProvider died on topics with no criteria. This
  fixes #152 [claytron]

- Fixed an issue where a recurring event would show up in TopicEventProvider
  results no matter what the criteria on the topic were. [claytron]

- Added uninstalling support, which fixes #168. [regebro]

- Updated wording to be consistent with other iCal/vCal actions. [aaronvanderlip]

- Fixed an issue where a recurring event would show up in TopicEventProvider