@@ -1,18 +1,0 @@
-[buildout]
-extends =
-    https://raw.github.com/collective/buildout.plonetest/master/test-4.x.cfg
-package-name = p4a.plonecalendar
-socket-timeout = 3
-allow-hosts =
-    *.python.org
-    *.zope.org
-    *.plone.org
-    docutils.sourceforge.net
-    prdownloads.sourceforge.net
-    effbot.org
-test-eggs =
-    p4a.plonecalendar
-
-[versions]
-zc.buildout = 1.6.3
-
