@@ -1,0 +1,64 @@
+# This is a development buildout. You only need it if you intent to 
+# develop p4a.plonecalendar or it's component products.
+
+[buildout]
+extensions =
+    mr.developer
+
+parts =
+    instance
+    zopepy
+    test
+
+# Change the number here to change the version of Plone being used
+extends = 
+    http://dist.plone.org/release/4.3-latest/versions.cfg
+    sources.cfg
+
+versions = versions
+
+# Add additional egg download sources here. dist.plone.org contains archives
+# of Plone packages.
+find-links =
+    http://dist.plone.org/release/4.3-latest
+    http://dist.plone.org/thirdparty
+
+eggs = p4a.plonecalendar
+   PIL
+
+develop = .
+
+[instance]
+# For more information on this step and configuration options see:
+# http://pypi.python.org/pypi/plone.recipe.zope2instance
+recipe = plone.recipe.zope2instance
+user = admin:admin
+http-address = 8080
+debug-mode = on
+verbose-security = on
+# If you want Zope to know about any additional eggs, list them here.
+# This should include any development eggs you listed in develop-eggs above,
+# e.g. eggs = Plone my.package
+eggs =
+    Plone
+    collective.backtowork
+    ${buildout:eggs}
+
+# If you want to register ZCML slugs for any packages, list them here.
+# e.g. zcml = my.package my.other.package
+zcml = 
+
+    
+[zopepy]
+# For more information on this step and configuration options see:
+# http://pypi.python.org/pypi/zc.recipe.egg
+recipe = zc.recipe.egg
+eggs = ${instance:eggs}
+interpreter = zopepy
+scripts = zopepy
+
+[test]
+recipe = zc.recipe.testrunner
+eggs = PIL
+    p4a.plonecalendar
+defaults = ['--exit-with-status', '--auto-color', '--auto-progress']
