@@ -1,0 +1,8 @@
+[buildout]
+auto-checkout =
+    dateable.chronos
+    dateable.kalends
+
+[sources]
+dateable.chronos = git git@github.com:collective/dateable.chronos.git
+dateable.kalends = git git@github.com:collective/dateable.kalends.git
