@@ -5,7 +5,14 @@ Changelog
 2.1b2 (unreleased)
 ------------------
 
+This version was tested with Plone 4.0.10, 4.1.6, 4.2.5,
+Plone 3 is no longer supported, but may still work.
+
 - Don't depend on p4a.calendar [tomgross]
+
+- Use jQuery instead of KSS. [regebro]
+
+- New buildouts for development on various Plone versions. [regebro]
 
 
 2.1b1 (2012-08-04)
